# EDA-AdvancedDataStructures

./: .gitignore  README.md
CurseOfDimensionality/: CMakeLists.txt
CurseOfDimensionality/CurseOfDimensionality/: CMakeLists.txt  CurseOfDimensionality.cpp  CurseOfDimensionality.h
CurseOfDimensionality/Plot/: datos.txt  plot.py
Kd-tree/src/: KDTree.hpp  main.cpp
